...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="AlternateSignInActivity">


    <EditText
        android:id="@+id/editTextAlternateSignInEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteX="50dp"
        app:layout_editor_absoluteY="100dp" />

    <EditText
        android:id="@+id/editTextAlternateSignInPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAlternateSignInEmail"
        app:layout_editor_absoluteX="50dp"
        app:layout_editor_absoluteY="50dp" />

    <Button
        android:id="@+id/buttonAlternateSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:onClick="OnClick_buttonAlternateSignIn"
...
