...
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayoutMainHomeViewActivityFragmentTabs"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:tabBackground="@color/tabBackgroundColor"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/tabIndicatorColor"
            app:tabIndicatorHeight="5dp"
...
